--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </ul>
                 </nav>
                 <div class="header__action">
-                    <a href="#" class="header__button button">Sing up</a>
+                    <a href="#" class="header__button button">Sing Up</a>
                 </div>
             </div>
         </header>
