added transition for buttons and links

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <div class="forms__actions">
                         <form action="#" class="forms__form">
                             <input type="email" class="forms__input">
-                            <a href="#" class="forms__button">
+                            <a href="#" class="forms__button button">
                                 Subscribe
                             </a>
                         </form>
